# polyphemus_methane

./: .pre-commit-config.yaml  README.md  pyproject.toml
data/: petrolia_landfill_reference_coords.csv  petrolia_landfill_source_coords.csv
legacy/: german_mills_settlers_park.py
outputs/petrolia_transects/: petrolia_transect_east.csv  petrolia_transect_mid.csv  petrolia_transect_north.csv  petrolia_transect_south.csv  petrolia_transect_west.csv
polyphemus/: CREDITS  history
polyphemus/include/SeldonData/: Format.cxx
polyphemus/include/atmopy/: __init__.py
polyphemus/include/common/: polyphemus.py
polyphemus/include/models/: BaseModel.hxx  GaussianPuffAerosol.cxx  GaussianPuffTransport.cxx  PlumeInGridAerosol.hxx  PlumeInGridChemistry.cxx  PlumeInGridTransport.cxx  PlumeInGridTransport.hxx  Polair3DAerosol.hxx  Polair3DTransport.cxx  Polair3DTransportSplit.cxx  PuffAerosol.cxx  PuffAerosol.hxx  PuffChemistry.cxx  StreetInGridChemistry.cxx  StreetInGridTransport.cxx  StreetNetworkChemistry.hxx  StreetNetworkTransport.cxx  StreetNetworkTransport.hxx  StreetTransport.cxx  aero_rst.f.glc2000
polyphemus/include/test_utils/: config_helpers.py  pytest_ext.py
polyphemus/postprocessing/: disp.py  init_aerosol.py  simulation.cfg
polyphemus/preprocessing/: general.cfg
polyphemus/utils/: check_observation  sconsign.py
src/: gaussian_plume.py  gaussian_plumes.py  german_mills_settlers_park.py  petrolia_predictions.py  transect_interp_petrolia.py  transect_mapping_german_mills.py
src/libs/: coord_convert.py  model_functions.py  model_sims.py
(+835 files in other folders)
