[tool.poetry]
name = "polyphemus_methane"
version = "0.1.0"
description = "Polyphemus config for methane plume modelling"
authors = ["Shiqi Xu"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.22.1"
pandas = "^1.3.5"
scipy = "^1.7.3"
atmopy = "^0.1.0"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"
black = "^21.12b0"
isort = "^5.10.1"
pytest = "^6.2.5"
pylint = "^2.12.2"
nbqa = "^1.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
