[tool.poetry]
name = "polyphemus_methane"
version = "0.1.0"
description = "Polyphemus config for methane plume modelling"
authors = ["Shiqi Xu"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "2.7.*"
numpy = "1.16.*"
scipy = "1.2.*"
pandas = "0.24.*"
matplotlib = "2.2.*"

[tool.poetry.dev-dependencies]
pylint = "1.4.*"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
